--- a/static/style.css
+++ b/static/style.css
@@ -250,11 +250,23 @@ footer {
 /* Affichage du qcm crée */
 .affQCM{
     height:60vh;
-    background-color: whitesmoke;
+    width: 40vw;
+    background-color: wheat;
     overflow-y:scroll;
 }
+.affQuestion{
+    text-align: left;
+    margin: 1em;
+}
+
 .affReponse{
-    border-style: ridge;
+    text-align: left;
+    margin: 1em;
+}
+
+.bigCheckbox{
+    height:1.5em;
+    width: 1.5em;
 }
 
 .affichageEtiquette{
