--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -16,12 +16,14 @@
         <hr/>
         <div class="affQCM">
             {% for i in range(len) %}
-            <div id="Q{{listequestion[i].idQ}}">{{listequestion[i].enonce}}</div>
+            <div class="affQuestion" id="Q{{listequestion[i].idQ}}">{{listequestion[i].enonce}}</div>
             <script>
                 $('#Q{{listequestion[i].idQ}}').html(converter.makeHtml($('#Q{{listequestion[i].idQ}}').text()));
             </script>
+            <hr/>
             {% for reponse in listereponse[i] %}
-            <div class="affReponse" id="{{reponse.idR}}">{{reponse.reponse}}</div>
+            
+            <div class="affReponse"><input class="bigCheckbox" id="{{reponse.idR}}" type="checkbox"/> <label for="{{reponse.idR}}">{{reponse.reponse}}</label></div>
             <script>
                 $('#{{reponse.idR}}').html(converter.makeHtml($('#{{reponse.idR}}').text()));
             </script>
