--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,15 @@
     {%include 'partials/_nav.html'%}
     <div class="menu">
         <h1>Bienvenue<br/>sur<br/>Infomaker !</h1>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="flashes">
+                    {% for message in messages %}
+                        <p>{{ message }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
         {% if session['nomU'] %}
         <p>Bonjour, {{session['nomU']}}</p>
         <a class="button" name="deconnexion" href="/deconnexion">Deconnexion</a>
