--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -38,6 +38,12 @@
                 {% endfor %}
             </table>
         </div>
+        <form action="/filtre" method="POST">
+            {% for etiquette in etiquettes %}       <!-- Pour chaque etiquette parmi les etiquettes -->
+                <input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}<br>
+            {% endfor %}
+            <input class="button" type="submit" value="filtrer">
+        </form>
     </div>
     {%include 'partials/footer.html'%}
 </body>
