--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -37,12 +37,18 @@
                 {% endfor %}
             </table>
         </div>
-        <form action="/filtre" method="POST">
-            {% for etiquette in etiquettes %}       <!-- Pour chaque etiquette parmi les etiquettes -->
-                <input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}<br>
-            {% endfor %}
-            <input class="button" type="submit" value="filtrer">
-        </form>
+        <div class="affichageEtiquette">
+            <form action="/filtre" method="POST">
+                <fieldset><legend>Filtrer avec des étiquettes</legend>
+                    <ul>
+                        {% for etiquette in etiquettes %}       <!-- Pour chaque etiquette parmi les etiquettes -->
+                            <li><input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}</li>
+                        {% endfor %}
+                    </ul>
+                </fieldset>
+                <p><input class="button" type="submit" value="Filtrer"></p>
+            </form>
+        </div>
     </div>
     {%include 'partials/footer.html'%}
 </body>
