--- a/templates/creationEtiquettes.html
+++ b/templates/creationEtiquettes.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet">
     {%include 'partials/Biblio.html'%}
-    <title>Creation</title>
+    <title>Etiquette</title>
 </head>
 <body>
     {%include 'partials/_nav.html'%}
