--- a/templates/creationCompte.html
+++ b/templates/creationCompte.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    {%include 'partials/_nav.html'%}
     <div class="menu">
         <h1>Créer votre compte</h1>
         <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p>
