--- a/templates/modifQuestion.html
+++ b/templates/modifQuestion.html
@@ -16,8 +16,10 @@
     <div class="menu">
         <!-- <form action="/visual" method="POST"> -->
         <form action="{{ url_for('modifier', id=idQ)}}" method="POST">
-            <h1>Modifier votre enoncé</h1>
+            <h1>Modifier votre énoncé</h1>
             <p><textarea name="question" rows="4" cols="40">{{enonce}}</textarea></p>
+            <hr/>
+            <h1>Modifier vos étiquettes</h1>
             <div class="affichageEtiquette">
                 <fieldset><legend>Étiquettes</legend>
                 <ul>
