--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -17,7 +17,7 @@
         <h1>Connexion</h1>
         <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p>
         <hr/>
-        {% with messages = get_flashed_messages() %}
+        {% with messages = get_flashed_messages() %}       <!-- Récupère les messages de flash() du serveur -->
             {% if messages %}
                 <div class="flashes">
                     {% for message in messages %}
@@ -26,9 +26,9 @@
                 </div>
             {% endif %}
         {% endwith %}
-        <form action="/connexion" method="POST">
-            <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>
-            <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>
+        <form action="/connexion" method="POST">                                     <!-- Connexion d'un utilisateur -->
+            <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>   <!-- Nom correspondant -->
+            <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>  <!-- Mot de passe correspondant-->
             <p><input class="button" type="submit" value="Connexion" /></p>
         </form>
     </div>
