--- a/templates/creationCompte.html
+++ b/templates/creationCompte.html
@@ -17,9 +17,9 @@
         <h1>Créer votre compte</h1>
         <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p>
         <hr/>
-        <form action="/creationCompte" method="POST">
-            <p> Nom d'utilisateur : </p><input type="text" name="creationNom"/>
-            <p> Mot de passe : </p><input type="password" name="creationMdp"/>
+        <form action="/creationCompte" method="POST">                             <!-- Création du compte -->
+            <p> Nom d'utilisateur : </p><input type="text" name="creationNom"/>   <!-- Avec un nom -->
+            <p> Mot de passe : </p><input type="password" name="creationMdp"/>    <!-- Et un mot de passe -->
             <p><input class="button" type="submit" value="Créer" /></p>
         </form>
     </div>
