--- a/templates/creationEtiquettes.html
+++ b/templates/creationEtiquettes.html
@@ -10,13 +10,14 @@
     {%include 'partials/Biblio.html'%}
     <title>Etiquette</title>
 </head>
+
 <body>
     {%include 'partials/_nav.html'%}
     <div class="mid double">
-        <div class="gaucheEtiquette">
+        <div class="gaucheEtiquette">                                                    
             <h1>Création d'une <br/> étiquette</h1>
             <hr/>
-            <form action="/creationEtiquettes" method="POST">
+            <form action="/creationEtiquettes" method="POST">                            <!-- Crée une nouvelle étiquette -->
                 <p>Nom de l'étiquette : <input type="text" name="nom"></p>
                 <p><input class = "button" type="submit" value="Créer l'étiquette"></p>
             </form>
@@ -24,27 +25,26 @@
         <div class="centreEtiquette">
             <h1>Modification d'une <br/> étiquette</h1>
             <hr/>
-            <form action="/modifEtiquettes" method="POST">
+            <form action="/modifEtiquettes" method="POST">                               <!-- Modifie une étiquette existante -->
                 <p> Sélectionnez l'étiquette à modifier : 
                 <select name="etiqAmodif">
-                    {% for etiq in etiqs%}
+                    {% for etiq in etiqs%}                                               <!-- Récupère les étiquettes présentes -->
                         <option value='{{etiq.idE}}'>{{etiq.nom}}</option>
                     {% endfor %}
                 </select>
                 </p>
-                <p>Nouveau nom de l'étiquette : <input type="text" name="nom"></p>
+                <p>Nouveau nom de l'étiquette : <input type="text" name="nom"></p>       <!-- Et change son nom -->
                 <p><input class="button" type="submit" value="Modifier l'étiquette"></p>
             </form>
         </div>
         <div class="droiteEtiquette">
             <h1>Suppression d'une <br/> étiquette</h1>
             <hr/>
-            <form action="/suppEtiquettes" method="POST">
+            <form action="/suppEtiquettes" method="POST">                                <!-- Supprime une étiquette -->
                 <p>Nom de l'étiquette : <input type="text" name="nom"></p>
                 <p><input class = "button" type="submit" value="Supprimer l'étiquette"></p>
             </form>
         </div>
-        
     </div>
     {%include 'partials/footer.html'%}
 </body>
