--- a/templates/lUtilisateurs.html
+++ b/templates/lUtilisateurs.html
@@ -21,9 +21,9 @@
                     <td>Nom d'utilisateur</td>
                     <td>Mot de passe</td>
                 </tr>
-                {% for utilisateurs in lUtilisateurs %}
-                <tr>
-                    <td>{{utilisateurs.nomU}}</td>
+                {% for utilisateurs in lUtilisateurs %}         <!-- Affiche chaque utilisateur avec son mot de passe -->
+                <tr>                                            <!-- Rappel : cette page est uniquement accessible si -->
+                    <td>{{utilisateurs.nomU}}</td>              <!-- l'utilisateur est 'ADMIN' -->
                     <td>{{utilisateurs.passU}}</td>
                 </tr>
                 {% endfor %}
