--- a/templates/partials/nouvelleReponse.html
+++ b/templates/partials/nouvelleReponse.html
@@ -3,3 +3,8 @@
 <span class="Checked"></span></label>
     <textarea id="{{ IdBouton }}" name="reponse" rows="2" cols="30" placeholder="Réponse"></textarea></p>
 <input class="delete" type="image" src="/static/delete.png" onclick="supprimerBouton({{ IdBouton }})" onclick="supprimerBouton({{ IdCheck }})" id="{{ IdBouton }}">
+
+<!-- 
+    HTML qui s'affiche chaque fois qu'on ajoute une réponse
+    Un bouton, une zone de texte et un bouton pour supprimer cette réponse
+-->
