--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
+    <link href="/static/style.css" rel="stylesheet">
+    {%include 'partials/Biblio.html'%}
     <title>Création QCM</title>
 </head>
 
@@ -27,7 +28,7 @@
                     <tr>
                         <td><input type="checkbox" name="{{element.idQ}}"></td>
                         <td class="left" id="{{element.idQ}}">{{element.enonce}}</td>
-                        <script>
+                        <script>                                                /* converti chaque énoncé */
                             $('#{{element.idQ}}').html(converter.makeHtml($('#{{element.idQ}}').text()));
                         </script>
                     </tr>
