--- a/templates/modifQuestion.html
+++ b/templates/modifQuestion.html
@@ -17,7 +17,7 @@
         <!-- <form action="/visual" method="POST"> -->
         <form action="{{ url_for('modifier', id=idQ)}}" method="POST">
             <h1>Modifier votre énoncé</h1>
-            <p><textarea name="question" rows="4" cols="40">{{enonce}}</textarea></p>
+            <p><textarea name="question" rows="4" cols="40">{{enonce}}</textarea></p> <!-- affichage de l'énoncé à modifier-->
             <hr/>
             <h1>Modifier vos étiquettes</h1>
             <div class="affichageEtiquette">
