--- a/templates/partials/Biblio.html
+++ b/templates/partials/Biblio.html
@@ -1,8 +1,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<script>
+<script>    /* MathJax (LateX) */
     MathJax = {
         tex: {
             inlineMath: [
@@ -11,14 +12,19 @@
         }
     }
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/mermaid@8.8.0/dist/mermaid.min.js"></script>
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-<script>hljs.highlightAll();</script>
-<script>
-    mermaid.initialize({ startOnLoad: true });
-</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>  <!--Showdown (Markdown) -->
 <script>
     var converter = new showdown.Converter();
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/mermaid@8.8.0/dist/mermaid.min.js"></script>         <!-- Mermaid -->
+<script>
+    mermaid.initialize({ startOnLoad: true });
+</script>
+
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">  <!-- Highlight (code) -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>  
+<script>hljs.highlightAll();</script>
+
+<!-- S'inclue à chaque page via {%include 'partials/Biblio.html'%} -->
