--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,5 @@
 <footer>
     <p>&copy; 2023 | THEO REYNIER | ANTHONY HOMMAIS | CORENTIN FAY | SONIA KECHAOU</p>
 </footer>
+
+<!-- S'inclue à chaque page via {%include 'partials/footer.html'%} -->
