--- a/static/style.css
+++ b/static/style.css
@@ -301,36 +301,40 @@ fieldset{
     font-weight: bold;
 }
 
-/* Style pour créer une étiquette */
-.gaucheEtiquette{
+/* Style etiquette*/
+.gereEtiquette{
     border: 0.5em solid black;
     border-radius: 10px;
     padding: 2em;
-    width: 25em;
+    width: 15vw;
+    font-size: 0.7em;
     background-color: whitesmoke;
     text-align: center;
+}
+
+/* Changement en fonction de la taille de l'écran */
+@media screen and (min-width: 1280px) {
+    .gereEtiquette{
+        font-size: 1em;
+    }
+}
+@media screen and (min-width: 1600px) {
+    .gereEtiquette{
+        width: 20vw;
+    }
+}
+/* Style pour créer une étiquette */
+.gaucheEtiquette{
     margin-right: 5em;
 }
 
 /* Style pour modifier une étiquette */
 .centreEtiquette{
-    border: 0.5em solid black;
-    border-radius: 10px;
-    padding: 2em;
-    width: 25em;
-    background-color: whitesmoke;
-    text-align: center;
-    margin-left: 5em;
-    margin-right: 5em;
+    margin-right: 2.5em;
+    margin-left: 2.5em;
 }
 
 /* Style pour supprimer une étiquette */
 .droiteEtiquette{
-    border: 0.5em solid black;
-    border-radius: 10px;
-    padding: 2em;
-    width: 25em;
-    background-color: whitesmoke;
-    text-align: center;
     margin-left: 5em;
 }
