--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@ body {
 
 table {
     background: lightgray;
-    width: 50vw;
+    width: 40vw;
     text-align: center;
     border: 1px solid black;
     padding: 0.5em;
@@ -38,9 +38,17 @@ h1 {
     opacity: 0.9;
     top: 50%;
     left: 50%;
+    font-size:0.7em;
     transform: translate(-50%, -50%);
     text-align: center;
     background-color: whitesmoke;
+}
+
+/* Ligne verticale */
+.liVer{
+    background-color: black;
+    width: 1px;
+    margin: 1em;
 }
 
 /* Classe pour définir la taille d'une liste et la possibilité de scroll si dépassement */
@@ -48,6 +56,12 @@ h1 {
     height:40vh;
     border:2px solid black;
     overflow-y: scroll;
+}
+/* Changement en fonction de la taille de l'écran */
+@media screen and (min-width: 1600px) {
+    .menu{
+        font-size: 1em;
+    }
 }
 
 /* Centrage d'un élément sur l'écran */
@@ -69,7 +83,7 @@ h1 {
     text-align: left;
 }
 
-/* Disposition de la classe code et visu */
+/* Disposition flex */
 .double{
     display: flex;
 }
@@ -96,6 +110,17 @@ h1 {
     background-color: whitesmoke;
     text-align: left;
     margin-left: 5em;
+}
+
+/* Affichage réponses visuel ligne */
+.repLi{
+    display: flex;
+}
+
+/* Affichage réponses visuel colonne */
+.repCo{
+    display:flex;
+    margin-right: 1em;
 }
 
 /* Classe pour modifier les <a> afin qu'ils ressemblent à des boutons */
