--- a/templates/modifQuestion.html
+++ b/templates/modifQuestion.html
@@ -13,23 +13,31 @@
 
 <body>
     {%include 'partials/_nav.html'%}
-    <div class="menu">
+    <div class="double menu">
         <!-- <form action="/visual" method="POST"> -->
-        <form action="{{ url_for('modifier', id=idQ)}}" method="POST">
-            <h1>Modifier votre énoncé</h1>
-            <p><textarea name="question" rows="4" cols="40">{{enonce}}</textarea></p> <!-- affichage de l'énoncé à modifier-->
-            <hr/>
-            <h1>Modifier vos étiquettes</h1>
-            <div class="affichageEtiquette">
-                <fieldset><legend>Étiquettes</legend>
-                <ul>
-                    {% for etiquette in etiquettes %}       <!-- Pour chaque etiquette parmi les etiquettes -->
-                        <li><input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}</li>
-                    {% endfor %}
-                </ul>
-                </fieldset>
+        <form class="double" action="{{ url_for('modifier', id=idQ)}}" method="POST">
+            <div>
+                <h1>Modifier votre énoncé</h1>
+                <p><textarea name="question" rows="4" cols="40">{{enonce}}</textarea></p> <!-- affichage de l'énoncé à modifier-->
+                <h1>Modifier vos étiquettes</h1>
+                <div class="affichageEtiquette">
+                    <fieldset><legend>Étiquettes</legend>
+                    <ul>
+                        {% for etiquette in etiquettes %}       <!-- Pour chaque etiquette parmi les etiquettes -->
+                            <li><input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}</li>
+                        {% endfor %}
+                    </ul>
+                    </fieldset>
+                </div>
             </div>
-            <p><input class="button" type="submit" value="Modifier" /></p>
+            <div class="liVer"></div>
+            <div>
+                <h1>Modifier vos réponses</h1>
+                {% for reponse in reponses %}                 <!-- Pour chaque réponse parmis les réponses -->
+                <p><textarea name="R{{reponse.idR}}" rows="4" cols="40">{{reponse.reponse}}</textarea></p>
+                {% endfor %}
+                <p><input class="button" type="submit" value="Modifier" /></p>
+            </div>
         </form>
         <!-- <a class="button" name="menu" href="/">Retour au menu</a><br/> -->
     </div>
