--- a/templates/connexionEnseignant.html
+++ b/templates/connexionEnseignant.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet">
     {%include 'partials/Biblio.html'%}
-    <title>Connexion</title>
+    <title>Connexion Enseignant</title>
 </head>
 
 <body>
