--- a/templates/espEtudiant.html
+++ b/templates/espEtudiant.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet">
     {%include 'partials/Biblio.html'%}
-    <title>Espace Enseignant</title>
+    <title>Espace Etudiant</title>
 </head>
 <body>
     {%include 'partials/_nav.html'%} 
     <div class="menu">
-        <h1>Espace<br/>Enseignant</h1>
+        <h1>Espace<br/>Etudiant</h1>
         {% with messages = get_flashed_messages() %}  <!-- Récupère les messages de flash() du serveur -->
             {% if messages %}
                 <div class="flashes">
@@ -22,8 +22,7 @@
                 </div>
             {% endif %}
         {% endwith %}
-        <a class="button" name="creationCompteEns" href="/creationCompteEnseignant">Créer un compte</a>
-        <a class="button" name="connexionEns" href="/connexionEnseignant">Connexion</a>
+        <a class="button" name="connexionEtu" href="/connexionEtudiant">Connexion</a>
     </div>
     {%include 'partials/footer.html'%}
 </body>
