--- a/templates/connexionEnseignant.html
+++ b/templates/connexionEnseignant.html
@@ -15,7 +15,7 @@
     {%include 'partials/_nav.html'%}
     <div class="menu">
         <h1>Connexion</h1>
-        <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p>
+        <!-- <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p> -->
         <hr/>
         {% with messages = get_flashed_messages() %}       <!-- Récupère les messages de flash() du serveur -->
             {% if messages %}
@@ -26,7 +26,7 @@
                 </div>
             {% endif %}
         {% endwith %}
-        <form action="/connexion" method="POST">                                     <!-- Connexion d'un utilisateur -->
+        <form action="/connexionEnseignant" method="POST">                                     <!-- Connexion d'un utilisateur -->
             <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>   <!-- Nom correspondant -->
             <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>  <!-- Mot de passe correspondant-->
             <p><input class="button" type="submit" value="Connexion" /></p>
